@@ -131,11 +131,11 @@ function success = getNextROIs(obj)
     end
 
     tStats = autoROI(pStack, ...
+        obj.autoROI.stats, ...
         'doPlot', doPlot, ...
         'settings', settings, ...
         'tThreshSD',obj.autoROI.stats.roiStats(end).tThreshSD, ...
-        'tThresh',thresh,...
-        'lastSectionStats',obj.autoROI.stats);
+        'tThresh',thresh);
 
     % If tStats is empty, this means autoROI failed to find any ROIs, we want bake to 
     % gracefully bail out if this happens.
